# NodeX-VPN

./: .gitignore  LICENSE  README.md  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
.github/workflows/: ci.yml  pages.yml  release.yml
NodeX-VPN/: RELEASES.md  build.gradle.kts  gradle.properties
NodeX-VPN/.github/workflows/: release.yml
NodeX-VPN/androidApp/: build.gradle.kts  proguard-rules.pro
NodeX-VPN/androidApp/src/main/kotlin/com/nodex/vpn/android/: BootReceiver.kt  MainActivity.kt  NodeXVpnService.kt
NodeX-VPN/androidTvApp/: build.gradle.kts
NodeX-VPN/androidTvApp/src/main/kotlin/com/nodex/vpn/androidtv/: TvApplication.kt
NodeX-VPN/androidTvApp/src/main/res/values/: themes.xml
NodeX-VPN/desktopApp/: build.gradle.kts
NodeX-VPN/desktopApp/macos/: entitlements.plist
NodeX-VPN/desktopApp/src/desktopMain/kotlin/com/nodex/vpn/desktop/: DesktopFirstLaunchPrefs.kt
NodeX-VPN/iosApp/: ExportOptions.plist  Package.swift  Podfile
NodeX-VPN/iosApp/NodeXTunnel/: NodeXTunnel.entitlements
NodeX-VPN/npm/: .npmignore  package.json
NodeX-VPN/router/: README.md  install.sh  package.sh
NodeX-VPN/rust-core/: Cargo.toml  build.rs
NodeX-VPN/rust-core/src/: lib.rs  logging.rs  socks_proxy.rs  uniffi_bindgen.rs
NodeX-VPN/rust-core/src/auth/: mod.rs  oauth.rs  token.rs
NodeX-VPN/rust-core/src/tunnel/: mod.rs  windows.rs
NodeX-VPN/shared/: build.gradle.kts
NodeX-VPN/shared/src/androidMain/kotlin/com/nodex/vpn/auth/: AuthRepository.android.kt
NodeX-VPN/shared/src/commonMain/kotlin/com/nodex/vpn/auth/: AuthRepository.kt  AuthState.kt  AuthViewModel.kt
NodeX-VPN/shared/src/commonMain/kotlin/com/nodex/vpn/domain/: Models.kt
NodeX-VPN/shared/src/commonMain/kotlin/com/nodex/vpn/ui/: App.kt
NodeX-VPN/shared/src/desktopMain/kotlin/com/nodex/vpn/auth/: AuthRepository.desktop.kt
NodeX-VPN/shared/src/iosMain/kotlin/com/nodex/vpn/: IOSFirstLaunchPrefs.kt  MainViewController.kt
NodeX-VPN/shared/src/iosMain/kotlin/com/nodex/vpn/platform/: PlatformVpnBridge.ios.kt
NodeX-VPN/shared/src/tvosMain/kotlin/com/nodex/vpn/: TvOSKoinHelper.kt
NodeX-VPN/tvosApp/: Podfile
NodeX-VPN/tvosApp/NodeXTvTunnel/: Info.plist  NodeXTvTunnel.entitlements
NodeX-VPN/tvosApp/NodeXTvVPN.xcworkspace/: contents.xcworkspacedata
NodeX-VPN/tvosApp/tvosApp/: AppDelegate.swift  ProxyDiscovery.swift  tvOSApp.swift
NodeX-VPN/tvosApp/tvosApp/Assets.xcassets/AppIcon~tv.appiconset/: Contents.json
androidApp/: build.gradle.kts
androidApp/src/main/: AndroidManifest.xml
androidApp/src/main/res/drawable/: ic_launcher_background.xml
androidApp/src/main/res/values/: strings.xml  themes.xml
androidTvApp/: build.gradle.kts
androidTvApp/src/main/: AndroidManifest.xml
androidTvApp/src/main/kotlin/com/nodex/vpn/android/tv/: TvMainActivity.kt
androidTvApp/src/main/kotlin/com/nodex/vpn/androidtv/: TvMainActivity.kt
androidTvApp/src/main/res/drawable/: tv_banner.xml
androidTvApp/src/main/res/values/: strings.xml
ci/: patch_pwd_grp_tvos.py
desktopApp/: build.gradle.kts
desktopApp/src/desktopMain/kotlin/com/nodex/vpn/desktop/: Main.kt  PrivilegeChecker.kt
docs/: index.html
gradle/: libs.versions.toml
iosApp/NodeXTunnel/: Info.plist  PacketTunnelProvider.swift
iosApp/iosApp/: AppDelegate.swift  ContentView.swift  Info.plist  NodeXVPN.entitlements  iOSApp.swift
iosApp/iosApp.xcodeproj/: project.pbxproj
npm/: README.md
router/: setup_glinet_merlin.sh  setup_openwrt.sh  setup_pfsense_opnsense.sh  setup_synology.sh
rust-core/: Cargo.toml  Cross.toml  build.rs
rust-core/src/: advanced.rs  dns.rs  error.rs  features.rs  kill_switch.rs  lib.rs  logging.rs  node_registry.rs  nodex_vpn.udl  privacy.rs  reconnect.rs  socks_proxy.rs  split_tunnel.rs  stats.rs  tor_manager.rs  tun2socks.rs
rust-core/src/auth/: oauth.rs  token.rs
rust-core/src/tunnel/: bsd.rs  linux.rs  macos.rs  mod.rs  windows.rs
scripts/: bump-version.js
shared/: build.gradle.kts
shared/src/androidMain/kotlin/com/nodex/vpn/auth/: AuthRepository.android.kt
shared/src/androidMain/kotlin/com/nodex/vpn/platform/: PlatformVpnBridge.android.kt
shared/src/commonMain/kotlin/com/nodex/vpn/di/: AppModule.kt
shared/src/commonMain/kotlin/com/nodex/vpn/domain/: Models.kt
shared/src/commonMain/kotlin/com/nodex/vpn/manager/: VpnManager.kt
shared/src/commonMain/kotlin/com/nodex/vpn/platform/: PlatformVpnBridge.kt
shared/src/commonMain/kotlin/com/nodex/vpn/ui/: App.kt
shared/src/commonMain/kotlin/com/nodex/vpn/ui/responsive/: AdaptiveLayout.kt  AdaptiveNav.kt  WindowSizeClass.kt  WindowSizeProvider.kt
shared/src/commonMain/kotlin/com/nodex/vpn/ui/screens/: AuthScreen.kt  LogsScreen.kt  OnboardingScreen.kt  ServerListScreen.kt  SettingsScreen.kt  SplashScreen.kt
shared/src/commonMain/kotlin/com/nodex/vpn/ui/theme/: Theme.kt
shared/src/desktopMain/kotlin/com/nodex/vpn/auth/: AuthRepository.desktop.kt
shared/src/desktopMain/kotlin/com/nodex/vpn/platform/: PlatformVpnBridge.desktop.kt
shared/src/desktopMain/kotlin/com/nodex/vpn/ui/responsive/: WindowSizeProvider.desktop.kt
shared/src/iosMain/kotlin/com/nodex/vpn/: KoinHelper.kt  MainViewController.kt
shared/src/iosMain/kotlin/com/nodex/vpn/auth/: AuthRepository.ios.kt
shared/src/iosMain/kotlin/com/nodex/vpn/platform/: PlatformVpnBridge.ios.kt
shared/src/iosMain/kotlin/com/nodex/vpn/ui/responsive/: WindowSizeProvider.ios.kt
shared/src/tvosMain/kotlin/com/nodex/vpn/: TVOSFirstLaunchPrefs.kt  TvMainViewController.kt
shared/src/tvosMain/kotlin/com/nodex/vpn/auth/: AuthRepository.tvos.kt
shared/src/tvosMain/kotlin/com/nodex/vpn/platform/: PlatformVpnBridge.tvos.kt
tvosApp/: ExportOptions.plist  Package.swift
tvosApp/NodeXTvTunnel/: AppProxyProvider.swift
tvosApp/NodeXTvVPN.xcodeproj/: project.pbxproj
tvosApp/tvosApp/: ContentView.swift  Info.plist  NodeXTvVPN.entitlements
tvosApp/tvosApp/Assets.xcassets/AppIcon.appiconset/: Contents.json
website/: index.html
website/docs/: index.html
website/privacy/: index.html
website/terms/: index.html
(+11 files in other folders)
