[package]
name         = "nodex-vpn-core"
version      = "0.1.0"
edition      = "2021"
authors      = ["NodeX VPN Team"]
description  = "Production-grade Tor-based VPN core engine"
rust-version = "1.80"

[lib]
name       = "nodex_vpn_core"
crate-type = ["cdylib", "staticlib"]

# ── Core dependencies ─────────────────────────────────────────────────────────
[dependencies]
uniffi = { version = "0.29", features = ["tokio"] }

# arti-client 0.22 (production-stable Tor implementation)
arti-client = { version = "0.22", features = [
    "tokio",
    "bridge-client",
    "pt-client",
    "onion-service-client",
]}
tor-config     = "0.22"
tor-rtcompat   = { version = "0.22", features = ["tokio"] }
tor-socksproto = "0.22"
# FIX: Required for BridgeConfig — arti_client::config::BridgeConfig is private,
# the canonical public type lives in tor_guardmgr::bridge.
tor-guardmgr   = { version = "0.22", features = ["bridge-client"] }

# Async runtime
tokio       = { version = "1", features = ["full"] }
tokio-util  = { version = "0.7", features = ["codec"] }
futures     = "0.3"

# TUN device (0.8 – latest stable async-capable)
tun = { version = "0.8", features = ["async"] }

# Serialisation
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling + logging
anyhow      = "1"
thiserror   = "1"
log         = "0.4"
env_logger  = "0.11"

# Sync primitives
once_cell   = "1"
parking_lot = "0.12"

# Misc
bytes       = "1"
async-trait = "0.1"
chrono      = { version = "0.4", features = ["serde"] }
uuid        = { version = "1", features = ["v4"] }

# DNS parsing (production DNS-over-Tor resolver)
hickory-proto = { version = "0.25", default-features = false, features = ["tokio"] }

# FIX: arti-client pulls rusqlite as a transitive dep (via tor-dirmgr cache).
# By default rusqlite links to the system libsqlite3, which does NOT exist on
# Android NDK or Windows CI runners - linker fails with:
#   Android: "unable to find library -lsqlite3"
#   Windows: "cannot open input file 'sqlite3.lib'"
# Adding rusqlite here with the "bundled" feature forces cargo to compile
# SQLite from source and link it statically - no system library needed.
rusqlite = { version = "0.31", features = ["bundled"] }

# ── Platform-specific ─────────────────────────────────────────────────────────
[target.'cfg(target_os = "windows")'.dependencies]
wintun      = "0.5"
windows-sys = { version = "0.59", features = [
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Foundation",
    "Win32_System_IO",
]}

[target.'cfg(target_os = "linux")'.dependencies]
nix       = { version = "0.30", features = ["net", "user", "process"] }
libc      = "0.2"
rtnetlink = "0.15"

[target.'cfg(target_os = "macos")'.dependencies]
nix  = { version = "0.30", features = ["net", "user"] }
libc = "0.2"

# Android: openssl MUST be vendored for NDK cross-compilation
# Without this, openssl-sys (pulled by arti) fails to find headers
[target.'cfg(target_os = "android")'.dependencies]
jni            = "0.21"
android_logger = "0.14"
openssl        = { version = "0.10", features = ["vendored"] }

[build-dependencies]
uniffi = { version = "0.29", features = ["build"] }

[features]
default = []
metrics = []

[profile.release]
lto           = true
codegen-units = 1
opt-level     = 3
panic         = "abort"
strip         = true
