[package]
name         = "nodex-vpn-core"
version      = "0.1.0"
edition      = "2021"
authors      = ["NodeX VPN Team"]
description  = "Production-grade Tor-based VPN core engine"
rust-version = "1.82"

[lib]
name       = "nodex_vpn_core"
crate-type = ["cdylib", "staticlib"]

# FIX: CI runs `cargo run --bin uniffi-bindgen generate ...` to produce
# Kotlin and Swift FFI bindings. Without this [[bin]] entry cargo errors:
#   "no bin target named `uniffi-bindgen` in default-run packages"
[[bin]]
name = "uniffi-bindgen"
path = "src/uniffi_bindgen.rs"

# ── Core dependencies ─────────────────────────────────────────────────────────
[dependencies]
# FIX: "cli" feature is required to expose uniffi::uniffi_bindgen_main()
# used by the uniffi-bindgen binary target (src/uniffi_bindgen.rs).
# Without it: error[E0425] cannot find function `uniffi_bindgen_main`
uniffi = { version = "0.31", features = ["tokio", "cli"] }

# arti-client 0.41 — latest stable Tor implementation
# All tor-* crates MUST be the same version as arti-client (monorepo).
arti-client = { version = "0.41", features = [
    "tokio",
    "bridge-client",
    "pt-client",
    "onion-service-client",
]}
tor-config     = "0.41"
tor-rtcompat   = { version = "0.41", features = ["tokio"] }
tor-socksproto = "0.41"
# tor-guardmgr: BridgeConfigBuilder lives here for runtime bridge parsing
tor-guardmgr   = { version = "0.41", features = ["bridge-client"] }

# Async runtime
tokio       = { version = "1", features = ["full"] }
tokio-util  = { version = "0.7", features = ["codec"] }
futures     = "0.3"

# TUN device (0.8 – latest stable async-capable)
tun = { version = "0.8", features = ["async"] }

# Serialisation
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling + logging
anyhow      = "1"
thiserror   = "2"
log         = "0.4"
env_logger  = "0.11"

# Sync primitives
once_cell   = "1"
parking_lot = "0.12"

# Misc
bytes       = "1"
async-trait = "0.1"
chrono      = { version = "0.4", features = ["serde"] }
uuid        = { version = "1", features = ["v4"] }

# FIX: hickory-proto 0.26.0 DROPPED the `tokio` feature entirely.
# The feature is gone — `available features: __dnssec, access-control,
# default, dnssec-aws-lc-rs, dnssec-ring, mdns, no-std-rand, serde, std,
# testing, wasm-bindgen`.
# Our code never imports hickory-proto directly (zero `use hickory_proto::` 
# anywhere) — it is purely a transitive dep of arti-client.
# Declaring it here WITHOUT the non-existent `tokio` feature ensures cargo
# picks 0.26 (matching arti's transitive requirement) while not requesting
# a feature that would fail the resolver on every single target.
hickory-proto = { version = "0.26", default-features = false }

# FIX: arti-client pulls rusqlite as a transitive dep (via tor-dirmgr cache).
# By default rusqlite links to the system libsqlite3, which does NOT exist on
# Android NDK or Windows CI runners — linker fails with:
#   Android: "unable to find library -lsqlite3"
#   Windows: "cannot open input file 'sqlite3.lib'"
# Adding rusqlite here with the "bundled" feature forces cargo to compile
# SQLite from source and link it statically — no system library needed.
# FIX: arti-client 0.41 / tor-dirmgr 0.41 requires rusqlite >=0.36.0, <0.39.0.
# The old pin of "0.32" caused a libsqlite3-sys link conflict because cargo
# couldn't satisfy both rusqlite 0.32 (libsqlite3-sys 0.30) AND
# rusqlite 0.36 (libsqlite3-sys 0.34) simultaneously — the `links = "sqlite3"`
# field is unique-per-graph. Bumping to "0.38" (latest in the >=0.36 <0.39
# window) unifies both requirements onto a single libsqlite3-sys version.
rusqlite = { version = "0.38", features = ["bundled"] }

# ── Platform-specific ─────────────────────────────────────────────────────────
[target.'cfg(target_os = "windows")'.dependencies]
wintun      = "0.5"
windows-sys = { version = "0.61", features = [
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Foundation",
    "Win32_System_IO",
]}

[target.'cfg(target_os = "linux")'.dependencies]
nix       = { version = "0.31", features = ["net", "user", "process"] }
libc      = "0.2"
rtnetlink = "0.15"

[target.'cfg(target_os = "macos")'.dependencies]
nix  = { version = "0.31", features = ["net", "user"] }
libc = "0.2"

# FreeBSD: pfSense / OPNsense
# nix provides kldload wrapper, ifconfig helpers, and sysctl bindings
[target.'cfg(target_os = "freebsd")'.dependencies]
nix  = { version = "0.31", features = ["net", "user", "process", "kmod"] }
libc = "0.2"

# Android: openssl MUST be vendored for NDK cross-compilation
# Without this, openssl-sys (pulled by arti) fails to find headers
[target.'cfg(target_os = "android")'.dependencies]
jni            = "0.22"
android_logger = "0.15"
openssl        = { version = "0.10", features = ["vendored"] }

[build-dependencies]
uniffi = { version = "0.31", features = ["build"] }

[features]
default = []
metrics = []

[profile.release]
lto           = true
codegen-units = 1
opt-level     = 3
panic         = "abort"
strip         = true
